# ZeroXBridge_Sequencer

./: .gitignore  Cargo.toml  Makefile  TREE_BUILDER_USAGE.md  build_and_test.sh  config.toml  setup_cairo_project.sh
crates/cairo1-rust-vm/: Scarb.toml
crates/cairo1-rust-vm/src/: lib.cairo  proof_gen.cairo
crates/lib/: Cargo.toml
crates/lib/src/api/: handlers.rs
crates/lib/src/events/: l1_event_watcher.rs
crates/proof-generator/src/l1/: verify_proof.cairo
crates/proof-pipeline/: Cargo.toml
crates/proof-pipeline/src/: main.rs  pipeline.rs
crates/proof-submitter/: Cargo.toml
crates/proof-submitter/src/: main.rs
crates/sequencer/: Cargo.toml
crates/sequencer/src/: main.rs
crates/tests/: Cargo.toml
crates/tests/src/: withdrawal_api.rs
crates/tree-builder/: Cargo.toml  README.md
crates/tree-builder/examples/: l2_merkle_example.rs
crates/tree-builder/src/: error.rs  l1_tree.rs  l2_tree.rs  lib.rs  main.rs
crates/tree-builder/src/l2/: merkle.rs  mod.rs  poseidon.rs
examples/: cairo_build_demo.rs  test_scarb_build.rs
migrations/: 20250428032930_create_withdrawals_table.sql  20250510155525_create_event_log_block_tracker.sql  20250808022908_add_user_address_to_withdrawal_table.sql  20250809164633_withdrawal_nonce_table.sql  20250810000001_create_deposit_nonces_table.sql  20250810000002_add_l2_hash_nonce_to_deposits.sql  20250812000000_add_tree_fields_to_deposits.sql
src/: config.rs  lib.rs  main.rs
src/api/: handlers.rs  routes.rs
src/db/: database.rs  mod.rs  types.rs
src/db/migrations/: 0002_create_stark_proofs_table.sql
src/event_logs/: mod.rs
src/events/: l1_event_watcher.rs
src/proof_client/: client.rs  mod.rs  proof_generator.rs
src/proof_generator/: README.md  cairo_build.rs  mod.rs  scarb_builder.rs  stark_prover.rs
src/queue/: l2_queue.rs
src/relayer/: starknet_relayer.rs
src/tree_builder/: client.rs  l1_client.rs  mod.rs
src/utils/: hash.rs  mod.rs
tests/: cairo_build_integration.rs  common.rs  compute_hash.rs  compute_hash_api.rs  deposit_api.rs  event_logs.rs  l1_events_logs.rs  mod.rs  proof_submission_integration_test.rs  starknet_relayer_test.rs  test_deposit_api.rs  test_poseidon_nonce_implementation.rs  test_withdrawal_api.rs  utils.rs
