[package]
name = "zeroxbridge-sequencer"
version = "0.1.0"
edition = "2021"

[dependencies]
config = "0.15.11"
serde = "1.0"
serde_json = "1.0.133"
anyhow = "1.0.95"
axum = "0.8.1"
tracing = "0.1.41"
tokio = { version = "1.44.1", features = ["full"] }
sqlx = { version = "0.8.3", features = [
  "postgres",
  "runtime-tokio-rustls",
  "macros",
  "migrate",
] }
stwo = {git = "https://github.com/starkware-libs/stwo"}
thiserror = "2.0.12"


[package.metadata.sqlx]
offline = true
