[package]
name = "proof-generatorr"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
futures.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
log.workspace = true
env_logger.workspace = true
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
structopt.workspace = true

[dev-dependencies]
tokio-test.workspace = true
pretty_assertions.workspace = true

# Local dependency (self-reference is unnecessary, can be removed)
# proof-generatorr = { path = ".", version = "0.1.0" }
