[package]
name = "tree-builder"
version = "0.1.0"
edition = "2021"

[dependencies]
# Cryptographic hashing
starknet-crypto = "0.7"
starknet-types-core = "0.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"
