[package]
name = "tree-builder"
version = "0.1.0"
edition = "2021"

[dependencies]
# accumulators = { version = "0.4", default-features = false, features = ["mmr", "keccak", "memory"] }
sha3 = "0.10"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
hex = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
hex = "0.4"
